v0.11.0/_sources/generated/statsmodels.genmod.generalized_estimating_equations.GEEResults.rst.txt
statsmodels.genmod.generalized\_estimating\_equations.GEEResults
================================================================

.. currentmodule:: statsmodels.genmod.generalized_estimating_equations

.. autoclass:: GEEResults
   :exclude-members:

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~GEEResults.conf_int
      ~GEEResults.cov_params
      ~GEEResults.f_test
      ~GEEResults.get_margeff
      ~GEEResults.initialize
      ~GEEResults.load
      ~GEEResults.normalized_cov_params
      ~GEEResults.params_sensitivity
      ~GEEResults.plot_added_variable
      ~GEEResults.plot_ceres_residuals
      ~GEEResults.plot_isotropic_dependence
      ~GEEResults.plot_partial_residuals
      ~GEEResults.predict
      ~GEEResults.qic
      ~GEEResults.remove_data
      ~GEEResults.save
      ~GEEResults.score_test
      ~GEEResults.sensitivity_params
      ~GEEResults.standard_errors
      ~GEEResults.summary
      ~GEEResults.t_test
      ~GEEResults.t_test_pairwise
      ~GEEResults.wald_test
      ~GEEResults.wald_test_terms
   
   
   
   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~GEEResults.bse
      ~GEEResults.centered_resid
      ~GEEResults.fittedvalues
      ~GEEResults.llf
      ~GEEResults.pvalues
      ~GEEResults.resid
      ~GEEResults.resid_anscombe
      ~GEEResults.resid_centered
      ~GEEResults.resid_centered_split
      ~GEEResults.resid_deviance
      ~GEEResults.resid_pearson
      ~GEEResults.resid_response
      ~GEEResults.resid_split
      ~GEEResults.resid_working
      ~GEEResults.split_centered_resid
      ~GEEResults.split_resid
      ~GEEResults.tvalues
      ~GEEResults.use_t
   
   
   