v0.13.5/_sources/generated/statsmodels.genmod.generalized_estimating_equations.GEEResults.rst.txt
statsmodels.genmod.generalized\_estimating\_equations.GEEResults
================================================================

.. currentmodule:: statsmodels.genmod.generalized_estimating_equations

.. autoclass:: GEEResults
   :exclude-members: conf_int,cov_params,f_test,get_hat_matrix_diag,get_influence,get_margeff,get_prediction,info_criteria,initialize,llf_scaled,load,normalized_cov_params,params_sensitivity,plot_added_variable,plot_ceres_residuals,plot_isotropic_dependence,plot_partial_residuals,predict,pseudo_rsquared,qic,remove_data,save,score_test,sensitivity_params,standard_errors,summary,summary2,t_test,t_test_pairwise,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~GEEResults.conf_int
      ~GEEResults.cov_params
      ~GEEResults.f_test
      ~GEEResults.get_hat_matrix_diag
      ~GEEResults.get_influence
      ~GEEResults.get_margeff
      ~GEEResults.get_prediction
      ~GEEResults.info_criteria
      ~GEEResults.initialize
      ~GEEResults.llf_scaled
      ~GEEResults.load
      ~GEEResults.normalized_cov_params
      ~GEEResults.params_sensitivity
      ~GEEResults.plot_added_variable
      ~GEEResults.plot_ceres_residuals
      ~GEEResults.plot_isotropic_dependence
      ~GEEResults.plot_partial_residuals
      ~GEEResults.predict
      ~GEEResults.pseudo_rsquared
      ~GEEResults.qic
      ~GEEResults.remove_data
      ~GEEResults.save
      ~GEEResults.score_test
      ~GEEResults.sensitivity_params
      ~GEEResults.standard_errors
      ~GEEResults.summary
      ~GEEResults.summary2
      ~GEEResults.t_test
      ~GEEResults.t_test_pairwise
      ~GEEResults.wald_test
      ~GEEResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~GEEResults.aic
      ~GEEResults.bic
      ~GEEResults.bic_deviance
      ~GEEResults.bic_llf
      ~GEEResults.bse
      ~GEEResults.centered_resid
      ~GEEResults.deviance
      ~GEEResults.fittedvalues
      ~GEEResults.llf
      ~GEEResults.llnull
      ~GEEResults.mu
      ~GEEResults.null
      ~GEEResults.null_deviance
      ~GEEResults.pearson_chi2
      ~GEEResults.pvalues
      ~GEEResults.resid
      ~GEEResults.resid_anscombe
      ~GEEResults.resid_anscombe_scaled
      ~GEEResults.resid_anscombe_unscaled
      ~GEEResults.resid_centered
      ~GEEResults.resid_centered_split
      ~GEEResults.resid_deviance
      ~GEEResults.resid_pearson
      ~GEEResults.resid_response
      ~GEEResults.resid_split
      ~GEEResults.resid_working
      ~GEEResults.split_centered_resid
      ~GEEResults.split_resid
      ~GEEResults.tvalues
      ~GEEResults.use_t
   
   
   